// Copyright (c) 2026, Alliance for Open Media. All rights reserved
//
// This source code is subject to the terms of the BSD 3-Clause Clear License
// and the Alliance for Open Media Patent License 1.0. If the BSD 3-Clause Clear
// License was not distributed with this source code in the LICENSE file, you
// can obtain it at www.aomedia.org/license/software-license/bsd-3-c-c. If the
// Alliance for Open Media Patent License 1.0 was not distributed with this
// source code in the PATENTS file, you can obtain it at
// www.aomedia.org/license/patent.

edition = "2023";

package iamf_tools_cli_proto;

import "iamf/cli/proto/types.proto";

option java_outer_classname = "ElementGainOffsetConfig";
option java_multiple_files = true;

message ElementGainOffsetConfig {
  message ValueType {
    QFormatOrFloatingPoint element_gain_offset = 1;
  }

  message RangeType {
    QFormatOrFloatingPoint default_element_gain_offset = 1;
    QFormatOrFloatingPoint min_element_gain_offset = 2;
    QFormatOrFloatingPoint max_element_gain_offset = 3;
  }

  oneof element_gain_offset_config_type {
    ValueType value_type = 1;
    RangeType range_type = 2;
  }
}
